--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="text">
            <h1>Console repair</h1>
            <div class="help">
-               <a>?</a>
+               <a href="https://www.google.com/">?</a>
            </div>
         <button><a href="tel:865777456" class="btn">Susisiekti</a></button>
         </div>
