--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>console</title>
+   <link href="favicon.ico" type="image/jpg" rel="shortcut icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&family=Whisper&display=swap" rel="stylesheet">
